deploykube/db/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-db
    #   role: primary
      tier: backend
  template:
    metadata:
      labels:
        app: weather-db
        # role: primary
        tier: backend
    spec:
      containers:
      - name: mysql
        image: mysql
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
        ports:
        - containerPort: 3306
