deploykube/db/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-db
  labels:
    app: weather-db
    # role: primary
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: weather-db
    # role: primary
    tier: backend
