deploykube/db/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: weather-db-np
spec:
  podSelector:
    matchLabels:
      app: weather-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: weather-app
    ports:
    - protocol: TCP
      port: 3306
